--- a/styles/sass/pages/home/_projects.scss
+++ b/styles/sass/pages/home/_projects.scss
@@ -268,7 +268,7 @@
 
 
     .linkBtn {
-        background-color: var(--accentBlue);
+        background-color: var(--darkBlue);
         color: #FFFFFF;
     }
 }
